kiali_ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace:  istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace:  istio-system
spec:
  hosts:
    - "*"
  gateways:
    - "kiali-gateway"
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali
